  impossible to write or read outside of the currently loaded project folder.
- Loading on startup is significantly faster because the logo loads in a
  worker thread.
- Changelog visible in the "About" menu.
- Help has a tree view containing all topics and pages can be searched.
- Code editor allows folding blocks.
- New PlayerMediaPlayer feature: give resources an ID and refer to them in 
  functions via id instead of resource name.
- New PlayerTextBox feature: can set duration of message and skippable flag
  in setText call itself instead of having to call the thread.sleep() method.
  The duration of a message can also be determined automatically with the 
  argument -1 (or any number < 0).

Fixed Bugs:
- Default style is fixed. Qml and icons look no longer broken.
- Application sounds don't cut off when a new sound effect starts playing.
- Metronome honors application settings (muted and volume).
- Help UI works on all screens, not just the primary one.
- UI sound effects don't cut off anymore.
- Performance fixes for title in menu and 404 text.
- Resource view is properly resizable now.
- Old version detection turn off even if the user answers 'No' to changing
  the folder.

================================================================================
Version 1.2.1.0
================================================================================

New Features:
- JS-Style import statements for Modules implemented without defaultMember suport 
  for now.

Changes:
- Resource Explorer View shows folder contents instead of the folder if a folder
  is selected in Tree View.
- Project Cards are rendered with a gloss effect.
- include method can include non-JSON-Formated scripts, which are evaled in the
  global scope.

Fixed Bugs:
- Flickering in Resource Explorer View was fixed.
- Early stopping of Resource preview load in Explorer View was fixed.
- Wheel scrolling of Project card selection fixed.